--- a/src/app/pages/organization/employees/templates/job/job-view.html
+++ b/src/app/pages/organization/employees/templates/job/job-view.html
@@ -1,198 +1,209 @@
-<div class="panel panel-default bootstrap-panel xmedium-panel pnlScroll">
-  <edit-panel-head page-title="page.pageinfo.title" save-form="empTabCtrl.saveFormCommon()" reset-form="empTabCtrl.resetFormCommon()"
-    clear-form="empTabCtrl.clearFormCommon()" condition="(true)"></edit-panel-head>
-  <div class="panel-body" style="padding:5px" ng-scrollbars ng-scrollbars-config="config">
+<form ng-submit="empTabCtrl.saveFormCommon()">
+  <div class="panel panel-default bootstrap-panel xmedium-panel pnlScroll">
+    <edit-panel-head page-title="page.pageinfo.title" reset-form="empTabCtrl.resetFormCommon()" clear-form="empTabCtrl.clearFormCommon()"
+      condition="(true)"></edit-panel-head>
+    <div class="panel-body" style="padding:5px;" ng-scrollbars ng-scrollbars-config="config">
+      <div style="min-height: 450px;">
+        <div class="row">
 
-    <div class="row">
-
-      <div class="col-sm-4">
-        <div class="form-group">
-          <label for="inputDepartment">Department*</label>
-          <select id="empDepartment_{{$index}}" name="empDepartment_{{$index}}" ng-model="empTabCtrl.entity.JDDeptId" class="form-control"
-            ng-options="department.value as department.name for department in page.pageinfo.selects.JDDeptId" data-placeholder="Select Nav Menu"
-            ng-required="true">
+          <div class="col-sm-4">
+            <div class="form-group">
+              <label for="inputDepartment">Department*</label>
+              <select id="empDepartment_{{$index}}" name="empDepartment_{{$index}}" ng-model="empTabCtrl.entity.JDDeptId" class="form-control"
+                ng-options="department.value as department.name for department in page.pageinfo.selects.JDDeptId" data-placeholder="Select Nav Menu"
+                required>
+                <option></option>
                </select>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="form-group">
-          <label for="inputDesignation">Designation*</label>
-          <select id="empdesignation_{{$index}}" name="empdesignation_{{$index}}" ng-model="empTabCtrl.entity.JDDesgId" class="form-control"
-            ng-options="designation.value as designation.name for designation in page.pageinfo.selects.JDDesgId" data-placeholder="Select Nav Menu"
-            ng-required="true">
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="form-group">
+              <label for="inputDesignation">Designation*</label>
+              <select id="empdesignation_{{$index}}" name="empdesignation_{{$index}}" ng-model="empTabCtrl.entity.JDDesgId" class="form-control"
+                ng-options="designation.value as designation.name for designation in page.pageinfo.selects.JDDesgId" data-placeholder="Select Nav Menu"
+                required>
+                <option></option>
                </select>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="form-group">
-          <label for="inputEmployeeType">Employment Type*</label>
-          <select id="empEmployeeType_{{$index}}" name="empEmployeeType_{{$index}}" ng-model="empTabCtrl.entity.JDEmploymentId" class="form-control"
-            ng-options="employeeType.value as employeeType.name for employeeType in page.pageinfo.selects.JDEmploymentId" data-placeholder="Select Nav Menu"
-            ng-required="true">
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="form-group">
+              <label for="inputEmployeeType">Employment Type*</label>
+              <select id="empEmployeeType_{{$index}}" name="empEmployeeType_{{$index}}" ng-model="empTabCtrl.entity.JDEmploymentId" class="form-control"
+                ng-options="employeeType.value as employeeType.name for employeeType in page.pageinfo.selects.JDEmploymentId"
+                data-placeholder="Select Nav Menu" required>
+                <option></option>
                </select>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-4">
-        <div class="form-group">
-          <label for="inputDepartment">Date Of Joining*</label>
-          <!--<input type="text" class="form-control" placeholder="mm-dd-yyyy"  ng-model="empTabCtrl.entity.JDDate">-->
-          <datepicker date-format="dd-MMMM-yyyy" selector="form-control">
-            <input ng-model="empTabCtrl.entity.JDDate" type="text" class="form-control" />
-          </datepicker>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="form-group">
-          <label for="inputDesignation">Grade*</label>
-          <select id="empdesignation_{{$index}}" name="empdesignation_{{$index}}" ng-model="empTabCtrl.entity.JDEmpGradeId" class="form-control"
-            ng-options="grade.value as grade.name for grade in page.pageinfo.selects.JDEmpGradeId" ng-change="vm.typeOnChange(vm.section.SecType,'Add')"
-            data-placeholder="Select Nav Menu" ng-required="true">
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="form-group">
+              <label for="inputDepartment">Date Of Joining*</label>
+              <!--<input type="text" class="form-control" placeholder="mm-dd-yyyy"  ng-model="empTabCtrl.entity.JDDate">-->
+              <datepicker date-format="dd-MMMM-yyyy" selector="form-control">
+                <input ng-model="empTabCtrl.entity.JDDate" type="text" class="form-control" required />
+              </datepicker>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="form-group">
+              <label for="inputDesignation">Grade*</label>
+              <select id="empdesignation_{{$index}}" name="empdesignation_{{$index}}" ng-model="empTabCtrl.entity.JDEmpGradeId" class="form-control"
+                ng-options="grade.value as grade.name for grade in page.pageinfo.selects.JDEmpGradeId" ng-change="vm.typeOnChange(vm.section.SecType,'Add')"
+                data-placeholder="Select Nav Menu" required>
+                 <option></option>
                </select>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="form-group">
-          <label for="inputEmployeeType">Level*</label>
-          <select id="empLevel_{{$index}}" name="empLevel_{{$index}}" ng-model="empTabCtrl.entity.JDEmpLevelId" class="form-control"
-            ng-options="level.value as level.name for level in page.pageinfo.selects.JDEmpLevelId" ng-change="vm.typeOnChange(vm.section.SecType,'Add')"
-            data-placeholder="Select Nav Menu" ng-required="true">
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="form-group">
+              <label for="inputEmployeeType">Level*</label>
+              <select id="empLevel_{{$index}}" name="empLevel_{{$index}}" ng-model="empTabCtrl.entity.JDEmpLevelId" class="form-control"
+                ng-options="level.value as level.name for level in page.pageinfo.selects.JDEmpLevelId" ng-change="vm.typeOnChange(vm.section.SecType,'Add')"
+                data-placeholder="Select Nav Menu" required>
+                 <option></option>
                </select>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-4">
-        <div class="checkbox">
-          <label class="custom-checkbox">      
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="checkbox">
+              <label class="custom-checkbox">      
             <input type="checkbox" ng-model="empTabCtrl.entity.JDIsOT" >   
             <span>OT</span>
           </label>
-        </div>
-      </div>
-      <div ng-if="empTabCtrl.entity.JDIsOT" class="col-sm-4">
-        <div class="checkbox">
-          <label class="custom-checkbox">      
-            <input type="checkbox" ng-model="empTabCtrl.entity.SingleOT" >   
+            </div>
+          </div>
+          <div ng-if="empTabCtrl.entity.JDIsOT" class="col-sm-4">
+            <div class="checkbox">
+              <label class="custom-checkbox">      
+            <input type="checkbox" ng-model="empTabCtrl.entity.SingleOT"  >   
             <span>Single OT</span>
           </label>
-        </div>
-      </div>
-      <div ng-if="empTabCtrl.entity.JDIsOT" class="col-sm-4">
-        <div class="checkbox">
-          <label class="custom-checkbox">      
+            </div>
+          </div>
+          <div ng-if="empTabCtrl.entity.JDIsOT" class="col-sm-4">
+            <div class="checkbox">
+              <label class="custom-checkbox">      
             <input type="checkbox" ng-model="empTabCtrl.entity.JDDoubleOT" >   
             <span>Double OT</span>
           </label>
-        </div>
-      </div>
-    </div>
-    <div class="row" ng-if="empTabCtrl.entity.JDIsOT">
-      <div class="col-sm-4" ng-if="empTabCtrl.entity.SingleOT">
-        <div class="form-group">
-          <label for="inputDepartment">Single OT Rate</label>
-          <input type="text" class="form-control" ng-model="empTabCtrl.entity.JDSingleOTRate">
-        </div>
-      </div>
-      <div class="col-sm-4" ng-if="empTabCtrl.entity.JDDoubleOT">
-        <div class="form-group">
-          <label for="inputDepartment">Double OT Rate</label>
-          <input type="text" class="form-control" ng-model="empTabCtrl.entity.DoubleOTRate">
-        </div>
-      </div>
-    </div>
-    <div ng-show="empTabCtrl.entity.JDEmploymentId=='3'">
-      <hr>
-      <div class="row">
-        <div class="col-sm-4">
-          <div class="form-group">
-            <label for="inputDepartment">From Date</label>
-            <!--<input type="text" class="form-control" placeholder="mm-dd-yyyy"  ng-model="empTabCtrl.entity.FromDate">-->
-            <datepicker date-format="dd-MMMM-yyyy" selector="form-control">
-              <input ng-model="empTabCtrl.entity.FromDate" type="text" class="form-control" />
-            </datepicker>
+            </div>
           </div>
         </div>
-        <div class="col-sm-4">
-          <div class="form-group">
-            <label for="inputDesignation">To Date</label>
-            <input type="text" class="form-control" placeholder="mm-dd-yyyy" ng-model="empTabCtrl.entity.ToDate">
+        <div class="row" ng-if="empTabCtrl.entity.JDIsOT">
+          <div class="col-sm-4" ng-if="empTabCtrl.entity.SingleOT">
+            <div class="form-group">
+              <label for="inputDepartment">Single OT Rate*</label>
+              <input type="text" class="form-control" ng-model="empTabCtrl.entity.JDSingleOTRate" ng-required="empTabCtrl.entity.SingleOT">
+            </div>
+          </div>
+          <div class="col-sm-4" ng-if="empTabCtrl.entity.JDDoubleOT">
+            <div class="form-group">
+              <label for="inputDepartment">Double OT Rate*</label>
+              <input type="text" class="form-control" ng-model="empTabCtrl.entity.DoubleOTRate" ng-required="empTabCtrl.entity.JDDoubleOT">
+            </div>
           </div>
         </div>
-        <div class="col-sm-4">
-          <div class="form-group">
-            <label for="inputEmployeeType">Vendor</label>
-            <select id="empLevel_{{$index}}" name="empLevel_{{$index}}" ng-model="empTabCtrl.entity.EmpLevelName" class="form-control"
-              ng-options="level.name as level.name for level in empTabCtrl.vendor" ng-change="vm.typeOnChange(vm.section.SecType,'Add')"
-              data-placeholder="Select Nav Menu" ng-required="true">
+        <div ng-show="empTabCtrl.entity.JDEmploymentId=='3'">
+          <hr>
+          <div class="row">
+            <div class="col-sm-4">
+              <div class="form-group">
+                <label for="inputDepartment">From Date</label>
+                <!--<input type="text" class="form-control" placeholder="mm-dd-yyyy"  ng-model="empTabCtrl.entity.FromDate">-->
+                <datepicker date-format="dd-MMMM-yyyy" selector="form-control">
+                  <input ng-model="empTabCtrl.entity.FromDate" type="text" class="form-control" />
+                </datepicker>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="form-group">
+                <label for="inputDesignation">To Date</label>
+                <datepicker date-format="dd-MMMM-yyyy" selector="form-control">
+                  <input ng-model="empTabCtrl.entity.ToDate" type="text" class="form-control" />
+                </datepicker>
+
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="form-group">
+                <label for="inputEmployeeType">Vendor</label>
+                <select id="empLevel_{{$index}}" name="empLevel_{{$index}}" ng-model="empTabCtrl.entity.EmpLevelName" class="form-control"
+                  ng-options="level.name as level.name for level in empTabCtrl.vendor" ng-change="vm.typeOnChange(vm.section.SecType,'Add')"
+                  data-placeholder="Select Nav Menu" ng-required="true">
                </select>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-4">
-          <div class="form-group">
-            <label for="inputDepartment">Manager</label>
-            <select id="empDepartment_{{$index}}" name="empDepartment_{{$index}}" ng-model="empTabCtrl.entity.DeptName" class="form-control"
-              ng-options="employee.value as employee.name for employee in empTabCtrl.employee" ng-change="vm.typeOnChange(vm.section.SecType,'Add')"
-              data-placeholder="Select Nav Menu" ng-required="true">
+          <div class="row">
+            <div class="col-sm-4">
+              <div class="form-group">
+                <label for="inputDepartment">Manager</label>
+                <select id="empDepartment_{{$index}}" name="empDepartment_{{$index}}" ng-model="empTabCtrl.entity.DeptName" class="form-control"
+                  ng-options="employee.value as employee.name for employee in empTabCtrl.employee" ng-change="vm.typeOnChange(vm.section.SecType,'Add')"
+                  data-placeholder="Select Nav Menu" ng-required="true">
                </select>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="form-group">
-            <label for="inputDesignation">Team Leader</label>
-            <select id="empdesignation_{{$index}}" name="empdesignation_{{$index}}" ng-model="empTabCtrl.entity.DesgName" class="form-control"
-              ng-options="employee.value as employee.name for employee in empTabCtrl.employee" ng-change="vm.typeOnChange(vm.section.SecType,'Add')"
-              data-placeholder="Select Nav Menu" ng-required="true">
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="form-group">
+                <label for="inputDesignation">Team Leader</label>
+                <select id="empdesignation_{{$index}}" name="empdesignation_{{$index}}" ng-model="empTabCtrl.entity.DesgName" class="form-control"
+                  ng-options="employee.value as employee.name for employee in empTabCtrl.employee" ng-change="vm.typeOnChange(vm.section.SecType,'Add')"
+                  data-placeholder="Select Nav Menu" ng-required="true">
                </select>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="form-group">
-            <label for="inputEmployeeType">HR</label>
-            <select id="empEmployeeType_{{$index}}" name="empEmployeeType_{{$index}}" ng-model="empTabCtrl.entity.EmploymentName" class="form-control"
-              ng-options="employee.value as employee.name for employee in empTabCtrl.employee" ng-change="vm.typeOnChange(vm.section.SecType,'Add')"
-              data-placeholder="Select Nav Menu" ng-required="true">
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="form-group">
+                <label for="inputEmployeeType">HR</label>
+                <select id="empEmployeeType_{{$index}}" name="empEmployeeType_{{$index}}" ng-model="empTabCtrl.entity.EmploymentName" class="form-control"
+                  ng-options="employee.value as employee.name for employee in empTabCtrl.employee" ng-change="vm.typeOnChange(vm.section.SecType,'Add')"
+                  data-placeholder="Select Nav Menu" ng-required="true">
                </select>
+              </div>
+            </div>
           </div>
+          <div class="row">
+            <div class="col-sm-4">
+              <div class="form-group">
+                <label for="inputDepartment">Company Email</label>
+                <input type="text" class="form-control">
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="form-group">
+                <label for="inputDesignation">Company Mobile</label>
+                <input type="text" class="form-control">
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="form-group">
+                <label for="inputEmployeeType">Company Phone</label>
+                <input type="text" class="form-control">
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-4">
+              <div class="form-group">
+                <label for="inputEmployeeType">Extension</label>
+                <input type="text" class="form-control">
+              </div>
+            </div>
+          </div>
+          <hr>
         </div>
       </div>
-      <div class="row">
-        <div class="col-sm-4">
-          <div class="form-group">
-            <label for="inputDepartment">Company Email</label>
-            <input type="text" class="form-control">
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="form-group">
-            <label for="inputDesignation">Company Mobile</label>
-            <input type="text" class="form-control">
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="form-group">
-            <label for="inputEmployeeType">Company Phone</label>
-            <input type="text" class="form-control">
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-4">
-          <div class="form-group">
-            <label for="inputEmployeeType">Extension</label>
-            <input type="text" class="form-control">
-          </div>
-        </div>
-      </div>
-      <hr>
-    </div>
-    <!--<div class="text-center">
+      <!--<div class="text-center">
       <button type="submit" class="btn btn-sm btn-primary" ng-click="empTabCtrl.saveForm()">Save</button>
       <button type="button" class="btn btn-sm btn-warning" ng-click="empTabCtrl.resetForm()">Reset</button>
       <button type="button" class="btn btn-sm btn-danger" ng-click="empTabCtrl.closeForm()">Clear</button>
     </div>-->
+    </div>
   </div>
-</div>
+  <form>
