--- a/src/app/common/components/panelHead/panelHead.html
+++ b/src/app/common/components/panelHead/panelHead.html
@@ -10,7 +10,7 @@
                 <button type="submit" class="btn btn-sm btn-primary" ng-click="saveForm()">Save</button>
                 <button type="button" class="btn btn-sm btn-warning" ng-click="resetForm()">Reset</button>
                 <button type="button" class="btn btn-sm btn-danger" ng-click="clearForm()">Clear</button>
-                 <button type="button" class="btn btn-sm btn-primary" ng-click="back('organization.employees.list')">List</button>
+                 <button type="button" class="btn btn-sm btn-primary" ng-click="employeeList()">List</button>
             </div>
         </div>
     </div>
